--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
         <h1>Algum título</h1>
         <p>Testando git......</p>
         <p>Novo parágrafo</p>
+        <p>Novo parágrafo 2</p>
     </body>
 </html>
